fixed spacing

--- a/src/components/PromoCards/PromoCard.scss
+++ b/src/components/PromoCards/PromoCard.scss
@@ -58,7 +58,7 @@
 
 @media screen and (min-width: $breakpoint-sm) {
   .PortfolioPromoCard {
-    width: 49%;
+    width: 48%; //!
     height: 160px;
   }
   .PortfolioPromoCard {
